MInor refactorings of unit tests